<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="high_score">HIGH SCORE</string>
  <string name="score">SCORE</string>
  <string name="instructions">Swipe to move. 2 + 2 = 4. Reach 2048.</string>
  <string name="you_win">You Win!</string>
  <string name="game_over">Game Over!</string>
  <string name="game_over_icon" translatable="false">Game Over! %1$s</string>
  <string name="go_on">Tap to Continue</string>
  <string name="for_now">For now…</string>
  <string name="endless">"Endless" Mode</string>

  <!-- Confirmation dialog-->
  <string name="reset">Reset</string>
  <string name="continue_game">Cancel</string>
  <string name="quit_game">Quit game</string>
  <string name="back">Back</string>
  <string name="reset_dialog_title">Reset game?</string>
  <string name="reset_dialog_message">Are you sure you wish to reset the game?</string>

  <string name="rank_score_details">%1$d points</string>
  <string name="waiting_for_opponents_to_finish">Waiting for opponents to finish game.</string>
  <string name="opponent_details">(%1$s did %2$s points)</string>

  <string name="amount_won_details">(your wallet is now %1$.2f$ heavier)</string>
  <string name="you_won">You Won! %1$s</string>
  <string name="you_lost">You Lost! %1$s</string>
  <string name="you_lost_timeout">Your time is up, You Lost! %1$s</string>
  <string name="unknown_error">An error has occurred.</string>
  <string name="rank">RANK</string>
  <string name="opponent">OPPONENT</string>
  <string name="opponent_score">SCORE</string>
  <string name="restart">RESTART</string>
  <string name="retry">RETRY</string>
  <string name="new_game">Play for Rewards</string>
  <string name="sandbox_game">Practice</string>
  <string name="user_name">Username</string>
  <string name="find_room">Find a Room</string>
  <string name="challenge_your_friends">Challenge your friends!</string>
  <string name="game_type_duel">Duel (1 on 1)\nYou can win 1.5$</string>
  <string name="game_type_duel_sandbox">Duel (1 on 1)</string>
  <string name="game_type_multiplayer">Multiplayer (3 players)\nYou can win 9$</string>
  <string name="game_type_multiplayer_sandbox">Multiplayer (3 players)</string>
  <string name="canceled_ticket_title">We\'re sorry to see you go</string>
  <string name="canceled_ticket_message">But don\'t worry, \nno funds were taken from your wallet.</string>
  <string name="close">Close</string>
  <string name="confirm_quit_title">Are you sure you want to quit?</string>
  <string name="confirm_quit_message">Your game will finish and \nyou won\'t be able to make any more moves</string>

  <string name="rankings_top_3_title">TOP 3</string>
  <string name="rankings_your_rank_title">Your rank</string>
  <string name="rankings_today">TODAY</string>
  <string name="rankings_week">WEEK</string>
  <string name="rankings_all_time">ALL TIME</string>
  <string name="rankings">RANKINGS</string>
  <string name="ranking_rewards_button">RANKING REWARDS</string>

  <string name="entry_price_duel">1 USD</string>
  <string name="geofencing_message">Your game has ended because e-Skills games are not available in your location.</string>
  <string name="seconds">Seconds</string>
  <string name="minutes">Minutes</string>
  <string name="hours">Hours</string>
  <string name="days">Days</string>
  <string name="last_winners_title">Last winners</string>
  <string name="next_reward_text">Next reward attributed in</string>
  <string name="current_top_3">Current top 3</string>
  <string name="your_ranking_title">Your ranking</string>
  <string name="not_attributed_place_holder">Not attributed</string>
</resources>
