<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:id="@+id/canceled_card"
      android:layout_width="340dp"
      android:layout_height="wrap_content"
      android:background="@drawable/background_card"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <TextView
        android:id="@+id/cancel_ticket_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:text="@string/canceled_ticket_title"
        android:textColor="@color/black_87_alpha"
        android:textSize="24sp"
        app:fontFamily="sans-serif"
        />

    <TextView
        android:id="@+id/cancel_ticket_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/canceled_ticket_message"
        android:textColor="@color/grey_alpha_active_54"
        />

    <Button
        android:id="@+id/close_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/close"
        />
  </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>