<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/quit_confirmation_card"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_card"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/confirm_quit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/big_margin"
            android:gravity="center"
            android:lineSpacingExtra="8sp"
            android:text="@string/confirm_quit_title"
            android:textColor="@color/black_87_alpha"
            android:textSize="24sp"
            app:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/confirm_quit_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/confirm_quit_message"
            android:textColor="@color/grey_alpha_active_54" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingStart="@dimen/big_margin"
            android:paddingTop="@dimen/button_height"
            android:paddingEnd="@dimen/big_margin"
            android:paddingBottom="@dimen/big_margin">

            <Button
                android:id="@+id/back_button"
                style="@style/ButtonStyle.Alternative"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/big_margin"
                android:maxWidth="150dp"
                android:minWidth="80dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/quit_game_button"
                style="@style/CancelBorderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:maxWidth="150dp"
                android:minWidth="80dp"
                android:text="@string/quit_game"
                android:textColor="@color/dialog_buy_value_text"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>