<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/card"
      android:layout_width="300dp"
      android:layout_height="270dp"
      android:background="@drawable/background_card"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_animation"
        android:layout_width="260dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_enableMergePathsForKitKatAndAbove="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/transact_loading_animation"
        />

    <TextView
        android:id="@+id/animation_description_text"
        style="@style/TextAppearance.AppCompat.Headline.Roboto.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:text="@string/waiting_for_opponents_to_finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottie_animation"
        />

    <TextView
        android:id="@+id/secondary_message"
        style="@style/TextAppearance.AppCompat.Body1.Roboto.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:maxLines="1"
        android:text="@string/opponent_details"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation_description_text"
        />

    <Button
        android:id="@+id/restart_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/restart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondary_message"
        android:enabled="false"
        />

    <Button
        android:id="@+id/retry_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/retry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondary_message"
        android:visibility="gone"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>