<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5sp"
    android:layout_marginBottom="5sp"
    android:layout_marginStart="4sp"
    android:layout_marginEnd="4sp"
    android:background="@color/background"
    android:orientation="horizontal"
    app:cardCornerRadius="8sp"
    android:id="@+id/countdown_timer">
  <LinearLayout
      android:id="@+id/linear_layout_2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      android:visibility="visible"
      android:orientation="horizontal"
      >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"
        android:layout_weight="1"
        android:background="@color/background"
        android:orientation="horizontal"
        app:cardCornerRadius="8sp"
        android:id="@+id/countdown_days_container">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible">

      <TextView
          android:id="@+id/countdown_days"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:textSize="20sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/days_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/days"
          android:textSize="20sp"
          android:textStyle="normal" />
    </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"
        android:layout_weight="1"
        android:background="@color/background"
        android:orientation="horizontal"
        app:cardCornerRadius="8sp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

      <TextView
          android:id="@+id/countdown_hours"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:textSize="20sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/tv_hour_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/hours"
          android:textSize="20sp"
          android:textStyle="normal" />
    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"
        android:layout_weight="1"
        android:background="@color/background"
        android:orientation="horizontal"
        app:cardCornerRadius="8sp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

      <TextView
          android:id="@+id/countdown_minutes"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:textSize="20sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/tv_minute_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/minutes"
          android:textSize="20sp"
          android:textStyle="normal" />
    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"
        android:layout_weight="1"
        android:background="@color/background"
        android:orientation="horizontal"
        app:cardCornerRadius="8sp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

      <TextView
          android:id="@+id/countdown_seconds"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:textSize="20sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/tv_second_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/seconds"
          android:textSize="20sp"
          android:textStyle="normal" />
    </LinearLayout>
    </androidx.cardview.widget.CardView>
  </LinearLayout>


</androidx.cardview.widget.CardView>