<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/background_card"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

      <com.airbnb.lottie.LottieAnimationView
          android:id="@+id/lottie_animation"
          android:layout_width="0dp"
          android:layout_height="152dp"
          android:layout_margin="@dimen/big_margin"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:lottie_autoPlay="true"
          app:lottie_enableMergePathsForKitKatAndAbove="true"
          app:lottie_loop="true"
          app:lottie_rawRes="@raw/transact_loading_animation"
          />

      <TextView
          android:id="@+id/animation_description_text"
          style="@style/TextAppearance.AppCompat.Body1.Roboto.Medium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/big_margin"
          android:maxLines="1"
          android:text="@string/game_over"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/lottie_animation"
          />

      <TextView
          android:id="@+id/secondary_message"
          style="@style/TextAppearance.AppCompat.Body1.Roboto.Medium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:maxLines="1"
          android:text="@string/opponent_details"
          android:visibility="gone"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/animation_description_text"
          />

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/restart_constraint"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginStart="32dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="32dp"
          android:layout_marginBottom="16dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/secondary_message">

        <Button
            android:id="@+id/restart_button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="@dimen/big_margin"
            android:text="@string/restart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0" />

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>